manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semesterly
  namespace: semesterly-dev
spec:
  selector:
    matchLabels: 
      app: semesterly
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: semesterly
    spec:
      containers:
      - name: nginx
        image: semesterly.azurecr.io/semesterly-nginx:Version
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 750m   
            memory: 2048M
      - name: gunicorn
        image: semesterly.azurecr.io/semesterly:Version
        command: ["bash"]
        args: ["-c","python manage.py migrate; gunicorn wsgi:application --bind=0.0.0.0:8000 --workers=3 --access-logfile - --error-logfile - --log-level info"]        
        workingDir: /code
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 750m
            memory: 2048M
