manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: semesterly
spec:
    type: LoadBalancer
    ports:
    - port: 8000 
    selector:
        app: semesterly
