manifests/ingress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: semesterly-ingress
  namespace: semesterly-dev
spec:
  tls:
  - hosts:
    - semesterly-dev.az.sis.jhu.edu
    secretName: az-wildcard-tls
  rules:
  - host: semesterly-dev.az.sis.jhu.edu
    http:
      paths:
      - backend:
          serviceName: semesterly-service
          servicePort: 80
        path: /
